[gd_scene load_steps=9 format=3 uid="uid://cjre5734fl4wm"]

[ext_resource type="Material" uid="uid://bpyc72ajp6yfb" path="res://Art/Shaders/colorswap.tres" id="1_gh3sb"]
[ext_resource type="Script" path="res://Scripts/win_screen.gd" id="2_71h5o"]
[ext_resource type="Theme" uid="uid://d20y8va2yhr08" path="res://Art/Themes/ui text large.tres" id="3_vppxx"]
[ext_resource type="PackedScene" uid="uid://beputxcs1pxrh" path="res://Scenes/UI/JuicyMovement.tscn" id="4_j44yb"]
[ext_resource type="Theme" uid="uid://bmv1iku1at618" path="res://Art/Themes/ui text mid.tres" id="6_mbf0g"]
[ext_resource type="Theme" uid="uid://b6o7rf6iavtxi" path="res://Art/Themes/button.tres" id="7_pdaoy"]
[ext_resource type="Script" path="res://Scripts/ui_menu_button.gd" id="8_3bh8g"]
[ext_resource type="Theme" uid="uid://dpv7tir788p5t" path="res://Art/Themes/ui text small.tres" id="9_52wlc"]

[node name="WinScreen" type="ColorRect"]
process_mode = 3
z_index = 100
material = ExtResource("1_gh3sb")
offset_right = 480.0
offset_bottom = 360.0
color = Color(0.101961, 0.101961, 0.101961, 1)
script = ExtResource("2_71h5o")
metadata/_edit_lock_ = true

[node name="Node2D" type="Control" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D"]
use_parent_material = true
layout_mode = 1
offset_left = -240.0
offset_top = -147.0
offset_right = 240.0
offset_bottom = -79.0
pivot_offset = Vector2(240, 34)
theme = ExtResource("3_vppxx")
bbcode_enabled = true
text = "[center]YOU'RE A 
WINNER, DOG!"
fit_content = true
metadata/_edit_group_ = true

[node name="JuicyMovement" parent="Node2D/RichTextLabel" node_paths=PackedStringArray("target_control") instance=ExtResource("4_j44yb")]
use_parent_material = true
target_control = NodePath("..")
bob_frequency = 5.0
bob_amplitude = 10.0
rot_frequency = 2.5
rot_amplitude = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -45.0
offset_right = -8.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="Kills" type="RichTextLabel" parent="Node2D/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_mbf0g")
bbcode_enabled = true
text = "[right]KILLS:"
fit_content = true

[node name="KPS" type="RichTextLabel" parent="Node2D/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_mbf0g")
bbcode_enabled = true
text = "[right]KILLS/SEC:"
fit_content = true

[node name="Guns" type="RichTextLabel" parent="Node2D/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_mbf0g")
bbcode_enabled = true
text = "[right]GUNS:"
fit_content = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Node2D"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -45.0
offset_right = 240.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="Kills2" type="RichTextLabel" parent="Node2D/VBoxContainer2"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_mbf0g")
bbcode_enabled = true
text = "0"

[node name="KPS2" type="RichTextLabel" parent="Node2D/VBoxContainer2"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_mbf0g")
bbcode_enabled = true
text = "0"

[node name="Guns2" type="RichTextLabel" parent="Node2D/VBoxContainer2"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_mbf0g")
bbcode_enabled = true
text = "0"

[node name="Buttons" type="Control" parent="Node2D"]
use_parent_material = true
layout_mode = 2
anchors_preset = 0

[node name="Continue" type="Button" parent="Node2D/Buttons"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 94.0
offset_right = 44.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_pdaoy")
text = "CONTINUE"
flat = true
script = ExtResource("8_3bh8g")

[node name="Return" type="Button" parent="Node2D/Buttons"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 122.0
offset_right = 39.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_pdaoy")
text = "RETURN TO MENU"
flat = true
script = ExtResource("8_3bh8g")

[node name="RichTextLabel2" type="RichTextLabel" parent="Node2D"]
visible = false
use_parent_material = true
layout_mode = 0
offset_left = 84.0
offset_top = 22.0
offset_right = 153.0
offset_bottom = 44.0
pivot_offset = Vector2(34, 9)
theme = ExtResource("9_52wlc")
bbcode_enabled = true
text = "[center]New Record!!!"

[node name="JuicyMovement" parent="Node2D/RichTextLabel2" node_paths=PackedStringArray("target_control") instance=ExtResource("4_j44yb")]
use_parent_material = true
target_control = NodePath("..")
bob_frequency = 5.0
bob_amplitude = 10.0
rot_frequency = 2.5
rot_amplitude = 10.0

[node name="JuicyMovement" parent="." node_paths=PackedStringArray("target_control") instance=ExtResource("4_j44yb")]
use_parent_material = true
target_control = NodePath("..")
slide_in = true

[connection signal="pressed" from="Node2D/Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Node2D/Buttons/Return" to="." method="_on_return_pressed"]
